# hope-agent

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.en.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.en.md  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  docker-compose.yml  eslint.config.js  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
crates/ha-core/: Cargo.toml  build.rs
crates/ha-core/proto/: pbbp2.proto
crates/ha-core/src/: activity.rs  agent_config.rs  agent_lifecycle.rs  agent_loader.rs  app_init.rs  attachments.rs  backup.rs  browser_state.rs  browser_ui.rs  canvas_db.rs  coding_eval.rs  coding_improvement.rs  context_retrieval.rs  crash_flush.rs  crash_journal.rs  dev_tools.rs  domain_eval.rs  domain_quality.rs  domain_workflow.rs  eval_context.rs  event_bus.rs  execution_mode.rs  ffmpeg.rs  file_extract.rs  file_upload.rs  git_control.rs  globals.rs  guardian.rs  lib.rs  local_embedding.rs  local_model_jobs.rs  loop_control.rs  lsp.rs  mac_control.rs  memory_extract.rs  model_usage.rs  oauth.rs  openclaw_import.rs  paths.rs  permissions.rs  (+23 more)
crates/ha-core/src/acp/: agent.rs  event_mapper.rs  mod.rs  session.rs  types.rs
crates/ha-core/src/acp_control/: config.rs  events.rs  mod.rs  runtime_stdio.rs  session_manager.rs
crates/ha-core/src/agent/: active_memory.rs  api_types.rs  coding_profile.rs  config.rs  content.rs  context.rs  errors.rs  event_rewrite.rs  events.rs  llm_adapter.rs  migration.rs  mod.rs  plan_context.rs  preflight.rs  related_notes.rs  resolver.rs  retrieval_planner.rs  side_query.rs  side_query_stream.rs  streaming_adapter.rs  streaming_loop.rs  token_manifest.rs  types.rs  vision_bridge.rs
crates/ha-core/templates/: agent.ar.md  agent.en.md  agent.es.md  agent.ja.md  agent.ko.md  agent.ms.md  agent.pt.md  agent.ru.md  agent.tr.md  agent.vi.md  agent.zh-TW.md  agent.zh.md  memory_import_from_ai.en.md  openclaw_agents.md  persona.ar.md  persona.pt.md  persona.ru.md  persona.vi.md  persona.zh-TW.md
crates/ha-core/tests/: coding_eval.rs  dreaming_eval.rs  hooks_compat.rs  hooks_e2e.rs  hooks_pre_tool_continue_false.rs  hooks_project_scope.rs  init_runtime.rs  lifecycle_smoke.rs  mcp_e2e.rs  memory_backup_restore.rs  platform_contracts.rs  runtime_lock.rs  stream_crash_recovery.rs  updater_e2e.rs
crates/ha-server/: Cargo.toml  build.rs
crates/ha-server/src/: auto_approve.rs  banner.rs  config.rs  error.rs  lib.rs  middleware.rs  web_assets.rs
crates/ha-server/tests/: server_smoke.rs
crates/oc-server/: Cargo.toml
crates/oc-server/src/: error.rs  lib.rs  middleware.rs
src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json  tauri.linux.conf.json  tauri.windows.conf.json  updater.pub.pem
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: agent.rs  agent_config.rs  agent_loader.rs  app_init.rs  backup.rs  browser_state.rs  canvas_db.rs  chat_engine.rs  cli_auth.rs  context_compact.rs  cron.rs  dashboard.rs  dev_tools.rs  docker.rs  failover.rs  file_extract.rs  globals.rs  lib.rs  logging.rs  macos_control.rs  main.rs  memory.rs  memory_extract.rs  menu_labels.rs  oauth.rs  paths.rs  permissions.rs  plan.rs  process_registry.rs  provider.rs  sandbox.rs  self_diagnosis.rs  session.rs  setup.rs  shortcuts.rs  skills.rs  subagent.rs  system_prompt.rs  tauri_wrappers.rs  tools.rs  (+6 more)
src-tauri/src/acp/: agent.rs  event_mapper.rs  protocol.rs  server.rs  session.rs  types.rs
src-tauri/src/acp_control/: config.rs  events.rs  health.rs  mod.rs  registry.rs  runtime_stdio.rs  session_manager.rs  types.rs
src-tauri/src/agent/: api_types.rs  config.rs  content.rs  context.rs  errors.rs  events.rs  mod.rs  types.rs
src-tauri/src/channel/: db.rs  mod.rs  registry.rs  traits.rs  types.rs  webhook_server.rs  worker.rs  ws.rs
src-tauri/src/chat_engine/: context.rs  mod.rs  types.rs
src-tauri/src/cli_onboarding/: banner.rs  mod.rs  prompt.rs  wizard.rs
src-tauri/src/commands/: acp_control.rs  agent_mgmt.rs  auth.rs  background_jobs.rs  browser.rs  channel.rs  chat.rs  coding_eval.rs  coding_improvement.rs  config.rs  context_retrieval.rs  crash.rs  cron.rs  dashboard.rs  design.rs  docker.rs  domain_eval.rs  domain_workflow.rs  dreaming.rs  error.rs  evaluation.rs  execution_mode.rs  file_upload.rs  filesystem.rs  git_control.rs  goal.rs  ide_context.rs  knowledge.rs  local_embedding.rs  local_llm.rs  local_model_alerts.rs  local_model_jobs.rs  logging.rs  loop_control.rs  lsp.rs  manual.rs  mcp.rs  media_gen.rs  memory.rs  misc.rs  (+22 more)
src-tauri/src/context_compact/: compact.rs  config.rs  estimation.rs  mod.rs  pruning.rs  summarization.rs  truncation.rs  types.rs
src-tauri/src/cron/: db.rs  executor.rs  mod.rs  schedule.rs  scheduler.rs  types.rs
src-tauri/src/dashboard/: cost.rs  detail_queries.rs  filters.rs  mod.rs  queries.rs
src-tauri/src/docker/: deploy.rs  lifecycle.rs  mod.rs  status.rs
src-tauri/src/logging/: app_logger.rs
src-tauri/src/memory/: embedding.rs  helpers.rs  import.rs  mmr.rs  mod.rs  sqlite.rs  traits.rs  types.rs
src-tauri/src/plan/: mod.rs  store.rs  subagent.rs  tests.rs
src-tauri/src/provider/: persistence.rs  store.rs
src-tauri/src/session/: acp_db.rs  db.rs  helpers.rs  mod.rs  subagent_db.rs  types.rs
src-tauri/src/skills/: discovery.rs  prompt.rs  requirements.rs  slash.rs
src-tauri/src/slash_commands/: mod.rs  parser.rs  registry.rs  types.rs
src-tauri/src/subagent/: cancel.rs  helpers.rs  injection.rs  mailbox.rs  spawn.rs  types.rs
src-tauri/src/system_prompt/: build.rs  constants.rs
src-tauri/src/tools/: acp_spawn.rs  agents.rs  amend_plan.rs  apply_patch.rs  approval.rs  browser.rs  cron.rs  definitions.rs  edit.rs  exec.rs  execution.rs  find.rs  grep.rs  image.rs  ls.rs  memory.rs  mod.rs  notification.rs  pdf.rs  plan_question.rs  plan_step.rs  process.rs  read.rs  sessions.rs  subagent.rs  submit_plan.rs  web.rs  web_fetch.rs  web_search.rs  write.rs
src-tauri/templates/: persona.es.md  persona.ja.md  persona.ko.md  persona.ms.md
src-tauri/windows/: installer-hooks.nsh
(+2504 files in other folders)
