[workspace]
members = [
    "src-tauri",
    "crates/oc-core",
    "crates/oc-server",
]
resolver = "2"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
async-trait = "0.1"
log = "0.4"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
rusqlite = { version = "0.39", features = ["bundled"] }
reqwest = { version = "0.12", features = ["json", "blocking", "stream", "native-tls"] }
futures-util = "0.3"
sha2 = "0.10"
base64 = "0.22"
dirs = "6"
rand = "0.9"
regex = "1.12.3"
url = "2"
once_cell = "1"
signal-hook = "0.3"
arc-swap = "1"
