[workspace]
members = [
    "src-tauri",
    "crates/ha-core",
    "crates/ha-server",
]
resolver = "2"

# Shared lint policy. Each crate opts in via `[lints] workspace = true`.
#
# `allow` entries fall into three groups:
#
# 1. Structural / refactor-y (separate work, don't gate CI):
#    - `too_many_arguments`, `type_complexity`
#
# 2. Stylistic / idiom modernization suggestions — valid advice but at 100+
#    hits each cleanup would dominate this changeset. Addressing them is
#    valuable as a dedicated follow-up, not as a blocker for enabling
#    `-D warnings` in CI:
#    - `map_or`, `redundant_closure`, `while_let_on_iterator`,
#      `collapsible_if`, `needless_borrow`, `manual_range_contains`,
#      `manual_clamp`, `manual_div_ceil`, `manual_is_multiple_of`,
#      `manual_strip`, `explicit_counter_loop`, `needless_range_loop`,
#      `if_same_then_else`, `let_unit_value`, `single_match_else`,
#      `unnecessary_to_owned`, `unnecessary_lazy_evaluations`,
#      `unused_async`, `useless_format`, `clone_on_copy`, `option_map_unit_fn`,
#      `bind_instead_of_map`, `extra_unused_lifetimes`, `bool_comparison`,
#      `needless_pass_by_ref_mut`, `map_clone`, `redundant_field_names`,
#      `single_char_pattern`, `only_used_in_recursion`, `match_single_binding`
#
# 3. Per-site correctness concerns reviewed but kept as allow-at-site:
#    - `module_inception` — `mod tests { ... }` inside `tests.rs` is our
#      idiomatic cross-file test layout; clippy's warning is a false positive.
#    - `await_holding_lock` — all 6 live hits are test-only `Mutex<()>` test
#      serialization locks that are intentional; allowing crate-wide keeps
#      the lint out of the signal without masking real async-lock bugs (those
#      would be `await_holding_refcell_ref` or similar).
#    - `new_without_default` — some `::new()` constructors need explicit
#      wiring (registries built up lazily).
#    - `large_enum_variant` — preemptive; some result / event enums in this
#      tree carry one genuinely-large variant (e.g. streaming events with
#      embedded payloads) where boxing would hurt the hot path more than the
#      memory cost.
[workspace.lints.clippy]
too_many_arguments = "allow"
type_complexity = "allow"
module_inception = "allow"
await_holding_lock = "allow"
new_without_default = "allow"
large_enum_variant = "allow"
map_clone = "allow"
redundant_closure = "allow"
while_let_on_iterator = "allow"
collapsible_if = "allow"
needless_borrow = "allow"
manual_range_contains = "allow"
manual_clamp = "allow"
manual_div_ceil = "allow"
manual_is_multiple_of = "allow"
manual_strip = "allow"
explicit_counter_loop = "allow"
needless_range_loop = "allow"
if_same_then_else = "allow"
let_unit_value = "allow"
single_match_else = "allow"
unnecessary_to_owned = "allow"
unnecessary_lazy_evaluations = "allow"
unused_async = "allow"
useless_format = "allow"
clone_on_copy = "allow"
option_map_unit_fn = "allow"
bind_instead_of_map = "allow"
extra_unused_lifetimes = "allow"
bool_comparison = "allow"
needless_pass_by_ref_mut = "allow"
redundant_field_names = "allow"
single_char_pattern = "allow"
only_used_in_recursion = "allow"
match_single_binding = "allow"
unnecessary_map_or = "allow"
# `map_or` family — `is_some_and` / `is_none_or` are 1.70+ but most hits are
# readable as-is. Worth a dedicated sweep once we bump MSRV.
map_unwrap_or = "allow"
# Our `Enum::from_str(&str) -> Self` helpers are intentionally infallible
# (return a default for unknown). Converting to `std::str::FromStr` (fallible
# `Result`) would require touching ~30 call sites without adding safety. Keep
# the API as-is.
should_implement_trait = "allow"
# Recent rustdoc warning about multi-line doc comments where the continuation
# could be interpreted as a list item. Visual-only, fixes are noisy compared
# to what they catch.
doc_lazy_continuation = "allow"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
async-trait = "0.1"
log = "0.4"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
rusqlite = { version = "0.39", features = ["bundled"] }
reqwest = { version = "0.12", features = ["json", "blocking", "stream", "native-tls", "multipart"] }
futures-util = "0.3"
sha2 = "0.10"
base64 = "0.22"
dirs = "6"
rand = "0.9"
regex = "1.12.3"
fancy-regex = "0.17"
url = "2"
once_cell = "1"
signal-hook = "0.3"
arc-swap = "1"
