[package]
name = "open-computer"
version = "0.1.0"
description = "OpenComputer - Personal AI Assistant with deep system integration"
authors = ["shiwenwen"]
license = "MIT"
repository = "https://github.com/shiwenwen/OpenComputer"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6" }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3" }
tauri-plugin-log = "2"
rig-core = "0.9"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
