[package]
name = "open-computer"
version = "0.1.0"
description = "OpenComputer - Personal AI Assistant with deep system integration"
authors = ["shiwenwen"]
license = "MIT"
repository = "https://github.com/shiwenwen/OpenComputer"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = ["protocol-asset", "macos-private-api"] }
tauri-plugin-log = "2"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
sha2 = "0.10"
base64 = "0.22"
uuid = { version = "1", features = ["v4"] }
dirs = "6"
open = "5"
rand = "0.9"
tiny_http = "0.12"
reqwest = { version = "0.12", features = ["json", "blocking", "stream"] }
futures-util = "0.3"
urlencoding = "2"
libc = "0.2"
portable-pty = "0.9"
bollard = "0.18"
image = { version = "0.25", features = ["jpeg", "png", "gif", "webp"] }
regex = "1.12.3"
ignore = "0.4.25"
glob = "0.3.3"
tauri-plugin-dialog = "2.6.0"
tauri-plugin-autostart = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-process = "2"
rusqlite = { version = "0.34", features = ["bundled"] }
sqlite-vec = "0.1"
fastembed = "5"
zerocopy = { version = "0.8", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
cron = "0.13"
pdf-extract = "0.7"
pdfium-render = "0.8"
calamine = "0.26"
zip = "2"
quick-xml = "0.37"
chromiumoxide = { version = "0.7", features = ["tokio-runtime"], default-features = false }
readability = "0.3"
htmd = "0.5"
once_cell = "1"
url = "2"

[target.'cfg(target_os = "macos")'.dependencies]
objc2-app-kit = { version = "0.3.2", features = ["NSWindow", "NSColor"] }
