[package]
name = "ha-core"
version = "0.1.0"
edition = "2021"
description = "Hope Agent core business logic — zero Tauri dependency"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
log = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
rusqlite = { workspace = true }
reqwest = { workspace = true }
futures-util = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }
dirs = { workspace = true }
rand = { workspace = true }
regex = { workspace = true }
fancy-regex = { workspace = true }
url = { workspace = true }
once_cell = { workspace = true }
signal-hook = { workspace = true }
arc-swap = { workspace = true }

# Non-workspace dependencies (core-specific)
sqlite-vec = "0.1"
fastembed = "5"
zerocopy = { version = "0.8", features = ["derive"] }
cron = "0.13"
pdf-extract = "0.10"
pdfium-render = "0.9"
calamine = "0.34"
zip = "2"
quick-xml = "0.37"
chromiumoxide = "0.9"
readability = "0.3"
htmd = "0.5"
which = "7"
sysinfo = "0.38"
open = "5"
tiny_http = "0.12"
urlencoding = "2"
libc = "0.2"
portable-pty = "0.9"
bollard = "0.20"
image = { version = "0.25", features = ["jpeg", "png", "gif", "webp"] }
arboard = { version = "3", features = ["image-data"] }
xcap = "0.9"
ignore = "0.4.25"
glob = "0.3.3"
teloxide = { version = "0.17", features = ["macros"], default-features = false }
tokio-util = { version = "0.7", features = ["rt"] }
tokio-tungstenite = { version = "0.29", features = ["native-tls"] }
native-tls = "0.2"
tokio-native-tls = "0.3"
openssl = { version = "0.10", features = ["vendored"] }
hmac = "0.12"
jsonwebtoken = "9"
axum = "0.8"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = { version = "0.6.4", features = ["std"] }
objc2-app-kit = { version = "0.3.2", features = ["NSWindow", "NSColor"] }
objc2-foundation = { version = "0.3.2", features = ["NSArray", "NSDate", "NSError", "NSObject", "NSRunLoop", "NSString"] }

[target.'cfg(windows)'.dependencies]
winreg = "0.52"

[lints]
workspace = true
