[package]
name = "ha-server"
version = "0.1.0"
edition = "2021"
description = "Hope Agent HTTP/WebSocket server"

[dependencies]
ha-core = { path = "../ha-core" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
futures-util = { workspace = true }

reqwest = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }

# HTTP/WS framework
axum = { version = "0.8", features = ["ws", "multipart"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "fs"] }

[lints]
workspace = true
