[package]
name = "ha-server"
version = "0.1.0"
edition = "2021"
description = "Hope Agent HTTP/WebSocket server"
build = "build.rs"

[build-dependencies]
# build.rs only touches std::fs — no deps needed.

[dependencies]
ha-core = { path = "../ha-core" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
futures-util = { workspace = true }

reqwest = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }

# HTTP/WS framework
axum = { version = "0.8", features = ["ws", "multipart"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "fs"] }

# Static web GUI assets (SPA fallback). `rust-embed` bakes the Vite `dist/`
# output into the release binary; in debug builds it reads from disk so
# front-end changes reload instantly.
rust-embed = { version = "8", features = ["compression", "mime-guess"] }
mime_guess = "2"

# Used by the `/api/server/local-ips` endpoint and the CLI launch banner to
# substitute a LAN-reachable IP when the server binds to 0.0.0.0.
local-ip-address = "0.6"

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
